--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -126,9 +126,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Mesh_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Mesh">Arbeitsbereich Mesh</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Mesh_improvements">Further Mesh improvements</span></h3>
-</div>
+<p><span id="Further_Mesh_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Mesh-Verbesserungen">Weitere Mesh-Verbesserungen</span></h3>
 <p><span id="OpenSCAD_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_OpenSCAD">Arbeitsbereich OpenSCAD</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170047
+Cached time: 20260114170054
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.054 seconds
-Real time usage: 0.069 seconds
+Real time usage: 0.063 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.033      1 -total
- 47.26%    2.851      2 Template:Message
- 27.77%    1.675      1 Template:VeryImportantMessage
- 23.42%    1.413      1 Template:FileName
- 19.81%    1.195      1 Template:TOCright
+100.00%    5.250      1 -total
+ 46.61%    2.447      2 Template:Message
+ 28.57%    1.500      1 Template:VeryImportantMessage
+ 22.82%    1.198      1 Template:FileName
+ 19.54%    1.026      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170046 and revision id 1738410. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170054 and revision id 1738412. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
