--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -132,9 +132,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="OpenSCAD_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_OpenSCAD">Arbeitsbereich OpenSCAD</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_OpenSCAD_improvements">Further OpenSCAD improvements</span></h3>
-</div>
+<p><span id="Further_OpenSCAD_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_OpenSCAD-Verbesserungen">Weitere OpenSCAD-Verbesserungen</span></h3>
 <p><span id="Part_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Part">Arbeitsbereich Part</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170054
+Cached time: 20260114170100
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.063 seconds
+CPU time usage: 0.064 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.250      1 -total
- 46.61%    2.447      2 Template:Message
- 28.57%    1.500      1 Template:VeryImportantMessage
- 22.82%    1.198      1 Template:FileName
- 19.54%    1.026      1 Template:TOCright
+100.00%    7.223      1 -total
+ 54.78%    3.957      2 Template:Message
+ 31.09%    2.246      1 Template:FileName
+ 22.19%    1.603      1 Template:VeryImportantMessage
+ 18.37%    1.327      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170054 and revision id 1738412. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170100 and revision id 1738414. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
