--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -144,9 +144,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Part_Design_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Part_Design">Arbeitsbereich Part Design</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Part_Design_improvements">Further Part Design improvements</span></h3>
-</div>
+<p><span id="Further_Part_Design_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Part_Design-Verbesserungen">Weitere Part Design-Verbesserungen</span></h3>
 <p><span id="Points_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Points">Arbeitsbereich Points</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170122
+Cached time: 20260114170129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.053 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.067 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.328      1 -total
- 46.30%    2.004      2 Template:Message
- 30.13%    1.304      1 Template:VeryImportantMessage
- 19.22%    0.832      1 Template:FileName
- 18.29%    0.792      1 Template:TOCright
+100.00%    6.443      1 -total
+ 46.11%    2.971      2 Template:Message
+ 31.14%    2.006      1 Template:VeryImportantMessage
+ 22.47%    1.448      1 Template:FileName
+ 18.56%    1.196      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170122 and revision id 1738418. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170129 and revision id 1738420. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
