--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 ist in Entwicklung, es steht noch kein Ver&ouml;ffentlichungstermin fest.</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -153,9 +153,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Further_Points_improvements"></span>
 </p>
 <h3><span class="mw-headline" id="Weitere_Points-Verbesserungen">Weitere Points-Verbesserungen</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Reverse_Engineering_Workbench">Reverse Engineering Workbench</span></h2>
-</div>
+<p><span id="Reverse_Engineering_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Reverse_Engineering">Arbeitsbereich Reverse Engineering</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Reverse_Engineering_improvements">Further Reverse Engineering improvements</span></h3>
 </div>
@@ -197,30 +197,30 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170139
+Cached time: 20260114170153
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.066 seconds
+CPU time usage: 0.056 seconds
+Real time usage: 0.078 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 676/5000000 bytes
+Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.933      1 -total
- 45.79%    2.717      2 Template:Message
- 28.74%    1.705      1 Template:VeryImportantMessage
- 21.02%    1.247      1 Template:FileName
- 20.65%    1.225      1 Template:TOCright
+100.00%    6.512      1 -total
+ 58.27%    3.795      2 Template:Message
+ 39.83%    2.594      1 Template:FileName
+ 21.78%    1.418      1 Template:VeryImportantMessage
+ 16.68%    1.086      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170139 and revision id 1738422. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170153 and revision id 1738424. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
