--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -156,9 +156,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Reverse_Engineering_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Reverse_Engineering">Arbeitsbereich Reverse Engineering</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Reverse_Engineering_improvements">Further Reverse Engineering improvements</span></h3>
-</div>
+<p><span id="Further_Reverse_Engineering_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Reverse_Engineering-Verbesserungen">Weitere Reverse Engineering-Verbesserungen</span></h3>
 <p><span id="Robot_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Robot">Arbeitsbereich Robot</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170153
+Cached time: 20260114170218
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.078 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.058 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.512      1 -total
- 58.27%    3.795      2 Template:Message
- 39.83%    2.594      1 Template:FileName
- 21.78%    1.418      1 Template:VeryImportantMessage
- 16.68%    1.086      1 Template:TOCright
+100.00%    5.737      1 -total
+ 37.14%    2.131      2 Template:Message
+ 31.92%    1.831      1 Template:TOCright
+ 26.29%    1.508      1 Template:VeryImportantMessage
+ 17.25%    0.990      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170153 and revision id 1738424. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170218 and revision id 1738426. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
