--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -162,9 +162,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Robot_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Robot">Arbeitsbereich Robot</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Robot_improvements">Further Robot improvements</span></h3>
-</div>
+<p><span id="Further_Robot_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Robot-Verbesserungen">Weitere Robot-Verbesserungen</span></h3>
 <p><span id="Sketcher_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Sketcher">Arbeitsbereich Sketcher</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170218
+Cached time: 20260114170231
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.058 seconds
+CPU time usage: 0.041 seconds
+Real time usage: 0.056 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.737      1 -total
- 37.14%    2.131      2 Template:Message
- 31.92%    1.831      1 Template:TOCright
- 26.29%    1.508      1 Template:VeryImportantMessage
- 17.25%    0.990      1 Template:FileName
+100.00%    5.827      1 -total
+ 54.30%    3.164      2 Template:Message
+ 29.83%    1.738      1 Template:FileName
+ 25.78%    1.502      1 Template:VeryImportantMessage
+ 16.96%    0.988      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170218 and revision id 1738426. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170231 and revision id 1738428. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
