--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -168,9 +168,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Sketcher_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Sketcher">Arbeitsbereich Sketcher</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Sketcher_improvements">Further Sketcher improvements</span></h3>
-</div>
+<p><span id="Further_Sketcher_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Sketcher-Verbesserungen">Weitere Sketcher-Verbesserungen</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
 </div>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170231
+Cached time: 20260114170240
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.056 seconds
+CPU time usage: 0.039 seconds
+Real time usage: 0.048 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.827      1 -total
- 54.30%    3.164      2 Template:Message
- 29.83%    1.738      1 Template:FileName
- 25.78%    1.502      1 Template:VeryImportantMessage
- 16.96%    0.988      1 Template:TOCright
+100.00%    4.983      1 -total
+ 44.47%    2.216      2 Template:Message
+ 30.81%    1.535      1 Template:VeryImportantMessage
+ 21.39%    1.066      1 Template:TOCright
+ 20.37%    1.015      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170231 and revision id 1738428. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170240 and revision id 1738430. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
