--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -56,9 +56,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <li>The <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
 </div>
 <h3><span class="mw-headline" id="API">API</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Removed_Python_API">Removed Python API</span></h4>
-</div>
+<p><span id="Removed_Python_API"></span>
+</p>
+<h4><span class="mw-headline" id="Entfernte_Python-API">Entfernte Python-API</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Changed_Python_API">Changed Python API</span></h4>
 </div>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170308
+Cached time: 20260114170332
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.051 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.727      1 -total
- 43.62%    2.062      2 Template:Message
- 30.57%    1.445      1 Template:VeryImportantMessage
- 20.58%    0.973      1 Template:TOCright
- 19.76%    0.934      1 Template:FileName
+100.00%    8.747      1 -total
+ 55.36%    4.842      2 Template:Message
+ 25.10%    2.196      1 Template:VeryImportantMessage
+ 20.10%    1.758      1 Template:FileName
+ 16.46%    1.440      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170308 and revision id 1738436. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170332 and revision id 1738438. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
