--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -62,9 +62,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Changed_Python_API"></span>
 </p>
 <h4><span id="Ge.C3.A4nderte_Python-API"></span><span class="mw-headline" id="Ge&auml;nderte_Python-API">Ge&auml;nderte Python-API</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="New_Python_API">New Python API</span></h4>
-</div>
+<p><span id="New_Python_API"></span>
+</p>
+<h4><span class="mw-headline" id="Neue_Python-API">Neue Python-API</span></h4>
 <h2><span class="mw-headline" id="Start">Start</span></h2>
 <p><span id="Addon_Manager"></span>
 </p>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170340
+Cached time: 20260114170345
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.051 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.056 seconds
+Real time usage: 0.136 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.741      1 -total
- 42.19%    4.110      2 Template:Message
- 33.95%    3.307      1 Template:VeryImportantMessage
- 19.48%    1.897      1 Template:TOCright
- 16.14%    1.572      1 Template:FileName
+100.00%   17.844      1 -total
+ 44.47%    7.935      2 Template:Message
+ 34.26%    6.114      1 Template:VeryImportantMessage
+ 19.41%    3.463      1 Template:TOCright
+ 15.78%    2.816      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170340 and revision id 1738440. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170345 and revision id 1738442. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
